--- a/src/View/Item/index.html.twig
+++ b/src/View/Item/index.html.twig
@@ -12,7 +12,7 @@
             <div class="row justify-center ">
                 <div class="col-md-8">
                     <h2 class="mb-4">Présentation de l'association</h2>
-                    <p class="mb-4">Fondée en (daterandom), l'académie de sabre laser Orleanaise vous apprend l'utilisation de cette arme mondialement connu qu'est le sabre laser. Notre association propose des inscriptions annuelles, mais également des séances d'initiation de manière ponctuelle pour petit et grand afin de tester ce nouveau sport de manière ludique et fun !</p>
+                    <p class="mb-4">Fondée en 2012, l'académie de sabre laser Orleanaise vous apprend l'utilisation de cette arme mondialement connu qu'est le sabre laser. Notre association propose des inscriptions annuelles, mais également des séances d'initiation de manière ponctuelle pour petit et grand afin de tester ce nouveau sport de manière ludique et fun !</p>
                     <p><a class="btn btn-outline-secondary" href="#" role="button">REJOIGNEZ-NOUS !!</a></p>
                 </div>
                 <div class="col-md-4 align-middle">
