--- a/src/View/Event/events.html.twig
+++ b/src/View/Event/events.html.twig
@@ -6,7 +6,7 @@
 
 <h1 class="text-center">Evénements</h1>
 
-<div class="events container-fluid">
+<div class="events container">
     <div class="row">
 
     {% for event in events %}
